--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #161624;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container1 {
@@ -22,4 +26,33 @@ body {
   width: 50vw;
   background-color: #1f1f2f;
   overflow-y: scroll;
+}
+
+.name1 {
+  font-family: 'Roboto';
+  font-size: 24px;
+  color: white;
+  font-weight: bold;
+  margin: 5px;
+}
+
+.list {
+  list-style-type: none;
+}
+
+.visit {
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 1;
+}
+
+.heading2 {
+  font-family: 'Roboto';
+  font-size: 24px;
+  color: white;
+  font-weight: bold;
+}
+
+.empty-name {
+  color: white;
 }
